Update search feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         tools:ignore="AllowBackup">
         <activity android:name=".auth.LoginWithAuthActivity"></activity>
         <activity android:name=".retrofit.LearnRetrofitActivity" />
-        <activity android:name=".room.WordListActivity" />
-        <activity android:name=".room.AddWordActivity" />
-        <activity android:name=".dashboard.FormEditProfileActivity" />
-        <activity android:name=".dashboard.WebViewActivity" />
+        <activity android:name="com.wahyu.hiringapps2.dashboard.profile.room.NoteListActivity" />
+        <activity android:name="com.wahyu.hiringapps2.dashboard.profile.room.AddNoteActivity" />
+        <activity android:name=".dashboard.profile.FormEditProfileActivity" />
+        <activity android:name=".dashboard.profile.WebViewActivity" />
         <activity android:name=".onBoard.OnBoardActivity" />
         <activity android:name=".splash.SplashActivity">
             <intent-filter>
