--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.0.1'
 
-    //gson
+    //Gson
     implementation 'com.google.code.gson:gson:2.8.6'
 }
