--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
-        <activity android:name=".dashboard.home.detail.DetailProfileActivity"></activity>
+        <activity android:name=".dashboard.home.detail.hire.HireActivity"></activity>
+        <activity android:name=".dashboard.home.detail.DetailProfileActivity" />
         <activity android:name=".auth.LoginWithAuthActivity" />
         <activity android:name=".retrofit.LearnRetrofitActivity" />
         <activity android:name=".dashboard.profile.room.NoteListActivity" />
         <activity android:name=".dashboard.profile.room.AddNoteActivity" />
-        <activity android:name=".dashboard.profile.FormEditProfileActivity" />
+        <activity android:name=".dashboard.profile.editProfile.EditProfileActivity" />
         <activity android:name=".dashboard.profile.WebViewActivity" />
         <activity android:name=".onBoard.OnBoardActivity" />
         <activity android:name=".splash.SplashActivity">
